--- a/package/standalone/sdk/apps/teledatics-gui/.config
+++ b/package/standalone/sdk/apps/teledatics-gui/.config
@@ -1,4 +1,7 @@
 CONFIG_HTTP_PARSER = y
 CONFIG_HTTP_SERVER = y
-CONFIG_CJSON = y
+CONFIG_CJSON = n
 CONFIG_NVS_FLASH = y
+CONFIG_WPA_SUPP = y
+#CONFIG_ETHERNET = y
+#CONFIG_ETH_ENC28J60 = y
