--- a/package/standalone/sdk/apps/teledatics-gui/Makefile
+++ b/package/standalone/sdk/apps/teledatics-gui/Makefile
@@ -1,6 +1,8 @@
 CSRCS += \
+	teledatics_gui_http.c \
 	teledatics_gui_main.c \
-	teledatics_gui_wifi.c \
-	teledatics_gui_http.c 
+	teledatics_gui_ppp.c \
+	teledatics_gui_util.c \
+	teledatics_gui_wifi.c 
 
 include $(SDK_WIFI_COMMON)/wifi_common.make
