--- a/package/standalone/sdk/apps/teledatics-gui/.config
+++ b/package/standalone/sdk/apps/teledatics-gui/.config
@@ -3,5 +3,7 @@ CONFIG_HTTP_SERVER = y
 CONFIG_CJSON = n
 CONFIG_NVS_FLASH = y
 CONFIG_WPA_SUPP = y
+CONFIG_SHT30 = y
+CONFIG_SGP30 = y
 #CONFIG_ETHERNET = y
 #CONFIG_ETH_ENC28J60 = y
