TD-XPAH add-on board support

--- a/package/standalone/lib/hostap/wpa_supplicant/FreeRTOS.config
+++ b/package/standalone/lib/hostap/wpa_supplicant/FreeRTOS.config
@@ -33,6 +33,9 @@ CONFIG_NO_STDOUT_DEBUG=y
 CONFIG_NDP_PREQ=y
 CONFIG_SAE=y
 CONFIG_OWE=y
+CONFIG_MESH=y
+CONFIG_EAP_PSK=y
+CONFIG_WPA_SUPP_CRYPTO=mbedtls
 #CONFIG_WPS=y
 #CONFIG_WPA_MSG=y
 
