--- a/package/standalone/make/Makefile.nrc7292.sdk.release
+++ b/package/standalone/make/Makefile.nrc7292.sdk.release
@@ -68,13 +68,13 @@ CONFIG_WDT=n
 endif
 
 # CLI
-CONFIG_CLI=y
+CONFIG_CLI=n
 
 # DEBUG (DEBUG, TRACKER, Statistics, etc.)
-CONFIG_DEBUG=y
+CONFIG_DEBUG=n
 
 # PRINT Console LOG
-CONFIG_LOG=y
+CONFIG_LOG=n
 
 # USE CENTER LO for 1M BW
 CONFIG_1MBW_CENTER_LO=y
